big(width): Fixed bug with width on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,8 @@ body {
 .text {
   display: block;
   text-align: justify;
-  padding: 10px;
-  width: calc(100vw - 20px);
+  padding: 1.5vw;
+  width: calc(100vw - 3vw);
   height: 100vh;
 
   position: absolute;
